// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home - PendingUser should match snapshot when contact info is empty 1`] = `
<div>
  <div
    class="MuiBox-root css-1ocq4y"
    data-testid="pendinguser-component"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 css-r1hick-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1qdazea-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-fd3f9-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-1mfglu8"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18kuvg9-MuiTypography-root"
                >
                  Thank You for Registering
                </h5>
                <div
                  class="MuiBox-root css-15i1vgz"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 css-qsyd5u-MuiTypography-root"
                  >
                    Start browsing products and creating lists!
                  </h5>
                </div>
                <div
                  class="MuiBox-root css-1qm1lh"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  >
                    If you need more information please contact:
                  </p>
                </div>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1c28hg8-MuiTypography-root"
                >
                  Account Admin
                </h5>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
                >
                  Phone Number
                  :
                   
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  Email Address
                  :
                   
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1qdazea-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-fd3f9-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-1qt14np"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1vn8opf-MuiTypography-root"
                >
                  Account Status
                  : 
                  <span
                    class="MuiBox-root css-pelz90"
                  >
                    Pending Review
                  </span>
                </h4>
                <svg
                  class="MuiBox-root css-1q2yoq2"
                  sx="[object Object]"
                >
                  time.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  Full access will be granted once your account is verified by a company admin or Reece employee.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home - PendingUser should match snapshot when contact info is loading 1`] = `
<div>
  <div
    class="MuiBox-root css-1nen2z4"
    data-testid="loader-component"
  >
    <div
      class="MuiBox-root css-hyxlzm"
    >
      <span
        aria-valuenow="100"
        class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
        role="progressbar"
        style="width: 80px; height: 80px; transform: rotate(-90deg);"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="19.5"
            stroke-width="5"
            style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
          />
        </svg>
      </span>
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 80px; height: 80px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="19.5"
            stroke-width="5"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Home - PendingUser should match snapshot with data while branchInfo is false 1`] = `
<div>
  <div
    class="MuiBox-root css-1ocq4y"
    data-testid="pendinguser-component"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 css-r1hick-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1qdazea-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-fd3f9-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-1mfglu8"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18kuvg9-MuiTypography-root"
                >
                  Thank You for Registering
                </h5>
                <div
                  class="MuiBox-root css-15i1vgz"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 css-qsyd5u-MuiTypography-root"
                  >
                    Start browsing products and creating lists!
                  </h5>
                </div>
                <div
                  class="MuiBox-root css-1qm1lh"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  >
                    If you need more information please contact:
                  </p>
                </div>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1c28hg8-MuiTypography-root"
                >
                  Account Admin
                </h5>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
                >
                  Phone Number
                  :
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1p166me-MuiTypography-root-MuiLink-root"
                    href="tel:123-456-7890"
                  >
                    123-456-7890
                  </a>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  Email Address
                  :
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1p166me-MuiTypography-root-MuiLink-root"
                    href="mailto:user@email.com"
                  >
                    user@email.com
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1qdazea-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-fd3f9-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-1qt14np"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1vn8opf-MuiTypography-root"
                >
                  Account Status
                  : 
                  <span
                    class="MuiBox-root css-pelz90"
                  >
                    Pending Review
                  </span>
                </h4>
                <svg
                  class="MuiBox-root css-1q2yoq2"
                  sx="[object Object]"
                >
                  time.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  Full access will be granted once your account is verified by a company admin or Reece employee.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home - PendingUser should match snapshot with data while branchInfo is true 1`] = `
<div>
  <div
    class="MuiBox-root css-1ocq4y"
    data-testid="pendinguser-component"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 css-r1hick-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1qdazea-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-fd3f9-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-1mfglu8"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18kuvg9-MuiTypography-root"
                >
                  Thank You for Registering
                </h5>
                <div
                  class="MuiBox-root css-15i1vgz"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 css-qsyd5u-MuiTypography-root"
                  >
                    Start browsing products and creating lists!
                  </h5>
                </div>
                <div
                  class="MuiBox-root css-1qm1lh"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  >
                    If you need more information please contact:
                  </p>
                </div>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1c28hg8-MuiTypography-root"
                >
                  Branch Contact Information
                </h5>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
                >
                  Phone Number
                  :
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1p166me-MuiTypography-root-MuiLink-root"
                    href="tel:123-456-7890"
                  >
                    123-456-7890
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1qdazea-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-fd3f9-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-1qt14np"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1vn8opf-MuiTypography-root"
                >
                  Account Status
                  : 
                  <span
                    class="MuiBox-root css-pelz90"
                  >
                    Pending Review
                  </span>
                </h4>
                <svg
                  class="MuiBox-root css-1q2yoq2"
                  sx="[object Object]"
                >
                  time.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  Full access will be granted once your account is verified by a company admin or Reece employee.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
